--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,3 +40,36 @@ a {
   height: 20px;
   background: #2196f6;
 }
+
+/**
+* ArtistList
+*/
+
+.artists-list {
+  box-sizing: border-box;
+  padding: 10px 30px;
+}
+
+.artists-list .artists-item {
+  display: block;
+  height: 290px;
+  background-size: cover !important;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.artists-list .artists-item div {
+  background: #219693;
+  color: white;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+}
+
+.artists-list h4 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 100;
+  margin: 20px 0;
+}
