--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,3 +73,44 @@ a {
   font-weight: 100;
   margin: 20px 0;
 }
+
+/**
+* Header
+*/
+
+header {
+  font-family: 'Monoton';
+  text-align: center;
+  font-size: 33px;
+  border-bottom: 1px solid #2196f3;
+  color: #949494;
+}
+
+/**
+* Artist Bio
+*/
+
+.artist-bio {
+  box-sizing: border-box;
+  padding: 10px 30px;
+}
+
+.artist-bio .avatar span {
+  width: 130px;
+  height: 130px;
+  display: block;
+  margin: 0 auto;
+  background-size: cover !important;
+}
+
+.artist-bio h3 {
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px;
+  margin: 10px 0;
+}
+
+.artist-bio .bio_text {
+  font-weight: 100px;
+  font-size: 14px;
+}
