--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,3 +114,18 @@ header {
   font-weight: 100px;
   font-size: 14px;
 }
+
+.album-list {
+  margin: 20px;
+}
+
+.album-list:after {
+  clear: both;
+  display: table;
+  content: '';
+}
+
+.album-list > img {
+  float: left;
+  width: 50%; 
+}
